# PyCombinations

./: .gitignore  README.md  setup.cfg
src/combinations/: __init__.py  combinations.py
tests/: CombinationsTest.py
