[metadata]
name = PyCombs
version = 1.0.0
author = Yanis MANSOUR
author_email = mansouryanis6@gmail.com
description = A package that generates all possible combinations in a given set as a list
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yanismnsr/PyCombinations
project_urls =
    Bug Tracker = https://github.com/yanismnsr/PyCombinations/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.0

[options.packages.find]
where = src